# LEADS

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  config.json  demo.py  main.py  pyproject.toml  remote.py  setup.py  test.py  test_comm_client.py  test_comm_server.py
.github/: FUNDING.yml
design/: Pin Config.pptx  arduino.c4d  index.html  main_controller.c4d  main_controller.stl  obs-config.json
docs/: Beginner Tutorial.md  Code Style Guide.md  Device Tree.md  LEADS.pptx
home/: index.html
leads/: __init__.py  callback.py  constant.py  context.py  data.py  data_persistence.py  event.py  leads.py  logger.py  ltm.py  os.py  registry.py  sft.py  sst.py  types.py  utils.py
leads-dashboard/: __init__.py
leads_arduino/: __init__.py  accelerometer.py  arduino_micro.py  arduino_nano.py  arduino_proto.py  odometer.py  pedal.py  voltage_sensor.py  wheel_speed_sensor.py
leads_audio/: __init__.py  prototype.py  system.py
leads_can/: __init__.py  obd.py  prototype.py
leads_comm_serial/: __init__.py  connection.py  identity.py
leads_dashboard/: __init__.py  config.py  demo.py  fonts.py  prototype.py  runtime.py  system.py
leads_emulation/: __init__.py  replay.py
leads_gpio/: __init__.py  button.py  cpu_monitor.py  gps_receiver.py  led.py  led_group.py  types.py
leads_gui/: __init__.py  accelerometer.py  config.py  icons.py  leads-theme.json  performance_checker.py  photo.py  prototype.py  proxy.py  runtime.py  speedometer.py  system.py  types.py  typography.py
leads_national_instruments/: __init__.py  mydaq.py
leads_raspberry_pi/: __init__.py  dc_motor.py  dc_motor_controller.py  gps_receiver.py  led.py  led_group.py  pedal.py  raspberry_pi_4b.py  throttle.py  voltage_sensor.py  (+1 more)
(+148 files in other folders)
